<resources>
    <!--Start activity-->
    <string name="str_userName_startActivity">Введите ваше имя</string>
    <string name="str_go_startActivity">Go</string>

    <!--Main activity"-->
    <string name="str_userName_mainActivity">Здесь должно появится введенное имя пользователя</string>
    <string name="str_settings_mainActivity">Настройки</string>

    <!--Setting activity"-->
    <string name="str_setting_settingLayout">Здесь будут общие настроки приложения. Возможно :)</string>

    <!--User Setting Activity -->
    <string name="str_userName_userSettingActivity">Имя</string>
    <string name="str_userSurname_userSettingActivity">Фамилия</string>
    <string name="str_userCurrentWeight_userSettingActivity">Текущий вес</string>
    <string name="str_userDesiredWeight_userSettingActivity">Желаемый вес</string>
    <string name="str_userCaloriesPerDay_userSettingActivity">Калории на день</string>
    <string name="str_userNumberOfMeals_userSettingActivity">Кол. приемов пищи в день</string>
    <string name="str_modify_userSettingActivity">Редактировать</string>


    <!--Default-->
    <string name="menu_stile">gaegu-regular.ttf</string>
    <string name="app_name">Body Helper</string>
    <string name="MainScreen">Главный экран</string>
    <string name="menu">Меню</string>
    <string name="recipes">Рецепты</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="str_back">Вернуться Назад</string>


</resources>