<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/id_count"
        android:title="@string/MainScreen" />

    <item android:title="Калорийность продуктов">
        <menu>
            <item
                android:id="@+id/id_rice_cal"
                android:title=" kjnjn" />
            <item
                android:id="@+id/id_buckwheat_cal"
                android:title="sdfdf" />

        </menu>
    </item>

    <item android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/id_recipes"
                android:title="@string/recipes" />
            <!--            <item-->
            <!--                android:id="@+id/id_recipes"-->
            <!--                android:title="@string/recipes" />-->
            <!--            <item-->
            <!--                android:id="@+id/id_recipes"-->
            <!--                android:title="@string/recipes" />-->
        </menu>
    </item>

</menu>