<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserSettingActivity">

    <EditText
        android:id="@+id/id_etUserName_userSettingActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"

        android:focusable="false"
        android:clickable="false"
        android:cursorVisible="false"

        android:hint="@string/str_userName_userSettingActivity"
        android:textColor="@color/black"
        android:textSize="25sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_etUserSurname_userSettingActivity"/>

    <EditText
        android:id="@+id/id_etUserSurname_userSettingActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"

        android:focusable="false"
        android:clickable="false"
        android:cursorVisible="false"

        android:hint="@string/str_userSurname_userSettingActivity"
        android:textColor="@color/black"
        android:textSize="25sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_etUserName_userSettingActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/id_etCurrentWeight_UserSettingActivity"/>

    <EditText
        android:id="@+id/id_etCurrentWeight_UserSettingActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"

        android:focusable="false"
        android:clickable="false"
        android:cursorVisible="false"

        android:hint="@string/str_userCurrentWeight_userSettingActivity"
        android:textColor="@color/black"
        android:textSize="25sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_etUserSurname_userSettingActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/id_etDesiredWeight_userSettingActivity"/>

    <EditText
        android:id="@+id/id_etDesiredWeight_userSettingActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"

        android:focusable="false"
        android:clickable="false"
        android:cursorVisible="false"

        android:hint="@string/str_userDesiredWeight_userSettingActivity"
        android:textColor="@color/black"
        android:textSize="25sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_etCurrentWeight_UserSettingActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/id_etCaloriesPerDay_UserSettingActivity"/>

    <EditText
        android:id="@+id/id_etCaloriesPerDay_UserSettingActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"

        android:focusable="false"
        android:clickable="false"
        android:cursorVisible="false"

        android:hint="@string/str_userCaloriesPerDay_userSettingActivity"
        android:textColor="@color/black"
        android:textSize="25sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_etDesiredWeight_userSettingActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/id_etNumberOfMeals_UserSettingActivity"/>

    <EditText
        android:id="@+id/id_etNumberOfMeals_UserSettingActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"

        android:focusable="false"
        android:clickable="false"
        android:cursorVisible="false"

        android:hint="@string/str_userNumberOfMeals_userSettingActivity"
        android:textColor="@color/black"
        android:textSize="25sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_etCaloriesPerDay_UserSettingActivity"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/id_btn_modify_userSettingActivity"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:padding="10dp"

        android:background="@color/black"
        android:text="@string/str_modify_userSettingActivity"
        android:textColor="@color/white"
        android:textSize="12sp"

        app:layout_constraintBottom_toTopOf="@id/id_btn_back_userSettingActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_etNumberOfMeals_UserSettingActivity"
        app:layout_constraintVertical_bias="0.900" />

    <Button
        android:id="@+id/id_btn_back_userSettingActivity"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="0dp"

        android:background="@color/black"
        android:text="@string/str_back"
        android:textColor="@color/white"
        android:textSize="30sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>